update model to include sandbox updatedAt and local status
