# generate/swagger.json
@@ -158,6 +158,9 @@
         },
         "status": {
           "$ref": "#/definitions/sandbox.Readiness"
+        },
+        "updatedAt": {
+          "type": "string"
         }
       },
       "type": "object"
@@ -657,8 +660,41 @@
       },
       "type": "object"
     },
+    "sandbox.LocalWorkloadStatus": {
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "tunnel": {
+          "properties": {
+            "health": {
+              "properties": {
+                "connected": {
+                  "type": "boolean"
+                },
+                "lastCheckTime": {
+                  "type": "string"
+                },
+                "lastConnectedTime": {
+                  "type": "string"
+                }
+              },
+              "type": "object"
+            }
+          },
+          "type": "object"
+        }
+      },
+      "type": "object"
+    },
     "sandbox.Readiness": {
       "properties": {
+        "local": {
+          "items": {
+            "$ref": "#/definitions/sandbox.LocalWorkloadStatus"
+          },
+          "type": "array"
+        },
         "message": {
           "description": "Message is a human readable explanation of why\nthe sandbox is healthy or not.",
           "type": "string"
@@ -750,7 +786,7 @@
           "type": "string"
         },
         "offsetFrom": {
-          "description": "OffsetFrom indicates what the Duration is relative to.  It\nmay be the empty string or \"createdAt\".  The empty string\ndefaults to meaning \"createdAt\".",
+          "description": "OffsetFrom indicates what the Duration is relative to.  It\nmay be the empty string, \"createdAt\" or \"updatedAt\".  The empty string\ndefaults to meaning \"createdAt\".",
           "type": "string"
         }
       },
