# models/sandbox.go
@@ -36,6 +36,9 @@ type Sandbox struct {
 
 	// status
 	Status *SandboxReadiness `json:"status,omitempty"`
+
+	// updated at
+	UpdatedAt string `json:"updatedAt,omitempty"`
 }
 
 // Validate validates this sandbox
@@ -151,6 +154,11 @@ func (m *Sandbox) contextValidateEndpoints(ctx context.Context, formats strfmt.R
 	for i := 0; i < len(m.Endpoints); i++ {
 
 		if m.Endpoints[i] != nil {
+
+			if swag.IsZero(m.Endpoints[i]) { // not required
+				return nil
+			}
+
 			if err := m.Endpoints[i].ContextValidate(ctx, formats); err != nil {
 				if ve, ok := err.(*errors.Validation); ok {
 					return ve.ValidateName("endpoints" + "." + strconv.Itoa(i))
@@ -169,6 +177,11 @@ func (m *Sandbox) contextValidateEndpoints(ctx context.Context, formats strfmt.R
 func (m *Sandbox) contextValidateSpec(ctx context.Context, formats strfmt.Registry) error {
 
 	if m.Spec != nil {
+
+		if swag.IsZero(m.Spec) { // not required
+			return nil
+		}
+
 		if err := m.Spec.ContextValidate(ctx, formats); err != nil {
 			if ve, ok := err.(*errors.Validation); ok {
 				return ve.ValidateName("spec")
@@ -185,6 +198,11 @@ func (m *Sandbox) contextValidateSpec(ctx context.Context, formats strfmt.Regist
 func (m *Sandbox) contextValidateStatus(ctx context.Context, formats strfmt.Registry) error {
 
 	if m.Status != nil {
+
+		if swag.IsZero(m.Status) { // not required
+			return nil
+		}
+
 		if err := m.Status.ContextValidate(ctx, formats); err != nil {
 			if ve, ok := err.(*errors.Validation); ok {
 				return ve.ValidateName("status")
